--- a/src/containers/skills/styles.scss
+++ b/src/containers/skills/styles.scss
@@ -3,6 +3,7 @@
         display: flex;
         padding: 20px;
         gap: 20px;
+        width: 100%;
 
         &__inner-content{
             flex: 1;
@@ -41,10 +42,10 @@
                 width: 100%;
             }
             .progressbar-wrapper{
-                padding: 50px 0px 0px 0px;
+                padding: 50px 0px;
 
                 p{
-                    font-size: 3.6rem;
+                    font-size: 2rem;
                     margin: 0 0 10px;
                     font-weight: 500;
                     text-transform: uppercase;
@@ -59,9 +60,15 @@
     .skills{
         &_content-wrapper{
             flex-direction: column;
+            width: 100%;
         }
+        &__inner-content {
+            &__progressbar-container {
+              margin-bottom: 10px; /* Adjusted margin for mobile view */
+            }
     }
-    .skills__content-wrapper__inner-content__progressbar-container{
-        margin-bottom: 20px;
-    }
+    // .skills__content-wrapper__inner-content__progressbar-container{
+    //     margin-bottom: 20px;
+    // }
+ }
 }
